fix dark mode

--- a/components/_dark-mode.css
+++ b/components/_dark-mode.css
@@ -92,3 +92,7 @@ body.light {
 .membership__plans.light {
    border: 4px solid var(--color-tertiary);
 }
+
+.fa-bars.light {
+   color: var(--color-tertiary);
+}
